--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.0
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
